manifests/actualbudget/actualbudget.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: actual
spec:
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actualbudget-pvc
      containers:
      - name: actualbudget
        image: ghcr.io/actualbudget/actual
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5006
        volumeMounts:
          - name: data
            mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actual
spec:
  selector:
    app: actualbudget
  ports:
  - name: http
    port: 5006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: actual
  name: actualbudget-ingress
  labels:
    name: actualbudget-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
    - secretName: actualbudget-tls
      hosts:
        - budget.jank.engineer
  rules:
  - host: budget.jank.engineer
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: actualbudget
            port: 
              name: http
